--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-    "name": "cap-bookshop-typescript",
-    "version": "1.0.0",
-    "description": "A simple self-contained bookshop service.",
-    "dependencies": {
-        "@sap/cds": "^5.1.5",
-        "cds-routing-handlers": "^3.0.5",
-        "express": "^4.17.1",
-        "reflect-metadata": "^0.1.13"
-    },
-    "devDependencies": {
-        "@types/express": "^4.17.12",
-        "cds2types": "^2.6.1",
-        "nodemon": "^2.0.7",
-        "prettier": "^2.3.1",
-        "sqlite3": "^5.0.2",
-        "typescript": "^4.3.4"
-    },
-    "scripts": {
-        "start": "node ./srv/server.js",
-        "dev": "npm run build:cds && nodemon",
-        "deploy": "cds deploy --to sqlite:bookshop.db",
-        "build": "npm run build:cds && npm run build:ts",
-        "build:cds": "echo 'Compiling cds sources...' && cds2types --cds ./srv/cat-service.cds --output ./src/entities.ts --prefix I -f && cds build && cp .cdsrc.json gen/srv",
-        "build:ts": "echo 'Compiling *.ts sources...' && tsc"
-    }
+  "name": "cap-bookshop-typescript",
+  "version": "1.0.0",
+  "description": "A simple self-contained bookshop service.",
+  "dependencies": {
+    "@sap/cds": "^5.1.5",
+    "bun": "^0.0.12",
+    "cds-routing-handlers": "^3.0.5",
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.12",
+    "bun-types": "^0.1.2",
+    "cds2types": "^2.6.1",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.3.1",
+    "sqlite3": "^5.0.2",
+    "typescript": "^4.3.4"
+  },
+  "scripts": {
+    "start": "bun ./srv/server.js",
+    "dev": "bun run build:cds && nodemon",
+    "deploy": "cds deploy --to sqlite:bookshop.db",
+    "build": "bun run build:cds && bun run build:ts",
+    "build:cds": "echo 'Compiling cds sources...' && cds2types --cds ./srv/cat-service.cds --output ./src/entities.ts --prefix I -f && cds build && cp .cdsrc.json gen/srv",
+    "build:ts": "echo 'Compiling *.ts sources...' && tsc"
+  }
 }
