--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "preserveConstEnums": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "types": ["bun-types"]
+
     },
     "include": ["src"],
     "exclude": ["node_modules"]
